Fix the text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -37,8 +37,8 @@ p {
   border-bottom: 2px solid #9a816d;
 }
 
-dt {
-
+dl {
+  text-align: left;
 }
 
 dd {
